// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  vertical-align: bottom;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  line-height: inherit;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-weight: 800;
  outline: 0;
  border-radius: 4px;
  -webkit-transition: box-shadow 125ms ease-out,background-color 125ms ease-out;
  transition: box-shadow 125ms ease-out,background-color 125ms ease-out;
  color: #0075AD;
}

.emotion-0 svg {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  margin-top: -1px;
}

.emotion-0:hover {
  background-color: rgba(5, 25, 45, 0.1);
}

.emotion-0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  box-shadow: 0 0 0 2px rgba(5, 25, 45, 0.1);
}

<a
  class="emotion-0"
  href="https://taylor-swift-fanclub.com"
>
  <span
    class="emotion-1"
  >
    Join Taylor Swift Fanclub
  </span>
</a>
`;

exports[` 2`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  vertical-align: bottom;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  line-height: inherit;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-weight: 800;
  outline: 0;
  border-radius: 4px;
  -webkit-transition: box-shadow 125ms ease-out,background-color 125ms ease-out;
  transition: box-shadow 125ms ease-out,background-color 125ms ease-out;
  color: #06BDFC;
}

.emotion-0 svg {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  margin-top: -1px;
}

.emotion-0:hover {
  background-color: rgba(255, 255, 255, 0.1);
}

.emotion-0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.1);
}

<a
  class="emotion-0"
  href="https://taylor-swift-fanclub.com"
>
  <span
    class="emotion-1"
  >
    Join Taylor Swift Fanclub
  </span>
</a>
`;

exports[`Link renders snapshot of focused state 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  vertical-align: bottom;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  line-height: inherit;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-weight: 800;
  outline: 0;
  border-radius: 4px;
  -webkit-transition: box-shadow 125ms ease-out,background-color 125ms ease-out;
  transition: box-shadow 125ms ease-out,background-color 125ms ease-out;
  color: #0075AD;
  box-shadow: 0 0 0 2px #009BD8;
}

.emotion-0 svg {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  margin-top: -1px;
}

.emotion-0:hover {
  background-color: rgba(5, 25, 45, 0.1);
}

<a
  class="emotion-0"
  href="https://datacamp.com"
>
  <span
    class="emotion-1"
  >
    Test
  </span>
</a>
`;
